# yt-processor

./: .env.example  .gitignore  .releaserc.json  AGENTS.md  AGENT_USAGE.md  Anthropic_Reveals_How_to_Prompt_Claude_Code_10x_Better.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Never Gonna Give You Up.md  PYTHON_SETUP.md  README.md  REVIEW_INDEX.md  package-lock.json  package.json  pyproject.toml  test-agents.js  test-agents.py  tsconfig.json
.beads/: deletions.jsonl  issues.jsonl
.github/workflows/: release.yml
.opencode/agent/: transcript-summarizer.md  transcript-summarizer.ts  youtube-processor.md  youtube-processor.ts
.opencode/tool/: youtube-transcript.ts  youtube_transcript.py
.opencode/utils/: sanitize.py  sanitize.ts
tests/: conftest.py  test_sanitize.py  test_youtube_transcript.py
