[project]
name = "yt-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
